namespaces/imageproxy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: imageproxy
spec:
  replicas: 5
  selector:
    matchLabels:
      app: imageproxy
  template:
    metadata:
      labels:
        app: imageproxy
    spec:
      containers:
      - name: imageproxy
        image: darthsim/imgproxy
        resources:
          limits:
            memory: "600Mi"
            cpu: "400m"
        ports:
        - containerPort: 8080
